style(TB): fixes rows alignment with columns

--- a/src/styles/templateBuilder.less
+++ b/src/styles/templateBuilder.less
@@ -545,6 +545,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    direction: ltr;
   }
 
   .row {
